marketing-lead2loyalty/apps-lead2loyalty/ui.apps/src/main/content/jcr_root/apps/lead2loyalty/components/content/clientlibs/lead2loyalty-homepage/css/lead2loyalty.css
/* ... */
.card-name-wrap {
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
}

.text-decoration-none a {
	text-decoration: none;
}

.plp-container .accordionFilter .collapse.panel.show {
    transition: max-height 0.2s ease-out 0s;
}

a.text-decoration-none {
    color: #000;
}

.modal-backdrop:nth-child(2n-1) {
  opacity : 0;
}

.cmp-carousel__item--active {
	display: block !important;
}

button#shareWithTeamsBtn {
    color: #000;
}

.share-with-teams-btn img {
    max-height: 18px;
    padding-bottom: 2px;
}

.basicpage:not(.product-page) .cmp-carousel__actions button  {
	pointer-events: none;
}

.category-filter .card-header .filter-header {
    position: relative;
}

.category-filter .card-header .arrow-icons {
    position: absolute;
    right: 0;
}
.category-filter .card-header .arrow-icons .fa-solid {
    opacity: 0.7;
} 
.category-filter .filter-header.expanded .arrow-up {
	display: block;
}
.category-filter .filter-header.expanded .arrow-down {
	display: none;
}
.category-filter .filter-header .arrow-up {
	display: none;
}                                        
.category-filter .filter-header .arrow-down {
	display: block;
}
.navbar-nav .nav-link{
    color: #0000008C;
}
.dropend .dropdown-toggle{
    color: #000;
    margin-left: 1em;
}
.dropdown .dropdown-menu{
    display: none;
}
.dropdown:hover > .dropdown-menu, .dropend:hover > .dropdown-menu{
    display: block;
    margin-top: .05em;
    margin-left: .05em;
}

h5.card-title,h5.card-text {
    min-height:48px;
    margin-bottom:0;
}

.custom-image-height {
    max-height:400px;
    padding:0 36px;
}

.molecule-spacing {
    padding:12px 10px;
}

.atm--text ul li {
	list-style-type:disc;
}

@media screen and (min-width:769px) {
    .dropend:hover > .dropdown-menu{
        position: absolute;
        top: 0;
        left: 100%;
    }
    .dropend .dropdown-toggle{
        margin-left: .5em;
    }
}

